Fix timeline dot overlapping day-of-week text

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -334,7 +334,7 @@ html, body {
 
 .timeline-dot {
   position: absolute;
-  left: 64px;
+  left: 44.5px;
   top: 15px;
   width: 7px;
   height: 7px;
